--- a/.github/workflows/refresh-lockfiles.yml
+++ b/.github/workflows/refresh-lockfiles.yml
@@ -61,6 +61,25 @@ jobs:
         with:
           path: ${{matrix.python}}-linux-64.lock
 
+  create_pr:
+    # once the matrix job has completed all the lock files will have been uploaded as artifacts.
+    # Download the artifacts, add them to the repo, and create a PR.
+    #if: "github.repository_owner == 'SciTools'"
+    if: "github.repository_owner == 'lbdreyer'"
+    runs-on: ubuntu-latest
+    needs: gen_lockfiles
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: get artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+
+      - name: Update lock files in repo
+        run: |
+          cp artifacts/artifact/*.lock requirements/ci/nox.lock
+          rm -r artifacts
       - name: "Generate token"
         uses: tibdex/github-app-token@v1
         id: generate-token
@@ -72,7 +91,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@b4d51739f96fca8047ad065eccef63442d8e99f7
         with:
-          #token: ${{ steps.generate-token.outputs.token }}
+          token: ${{ steps.generate-token.outputs.token }}
           commit-message: Updated environment lockfiles
           committer: "Lockfile bot <noreply@github.com>"
           author: "Lockfile bot <noreply@github.com>"
@@ -91,4 +110,4 @@ jobs:
           echo "pull-request #${{ steps.cpr.outputs.pull-request-number }}"
           echo "pull-request URL ${{ steps.cpr.outputs.pull-request-url }}"
           echo "pull-request operation [${{ steps.cpr.outputs.pull-request-operation }}]"
-          echo "pull-request head SHA ${{ steps.cpr.outputs.pull-request-head-sha }}"
+          echo "pull-request head SHA ${{ steps.cpr.outputs.pull-request-head-sha }}"     
