--- a/.github/workflows/refresh-lockfiles.yml
+++ b/.github/workflows/refresh-lockfiles.yml
@@ -91,7 +91,7 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@b4d51739f96fca8047ad065eccef63442d8e99f7
         with:
-          token: ${{ steps.generate-token.outputs.token }}
+          #token: ${{ steps.generate-token.outputs.token }}
           commit-message: Updated environment lockfiles
           committer: "Lockfile bot <noreply@github.com>"
           author: "Lockfile bot <noreply@github.com>"
