--- a/.github/workflows/refresh-lockfiles.yml
+++ b/.github/workflows/refresh-lockfiles.yml
@@ -91,13 +91,13 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@b4d51739f96fca8047ad065eccef63442d8e99f7
         with:
-          #token: ${{ steps.generate-token.outputs.token }}
+          token: ${{ steps.generate-token.outputs.token }}
           commit-message: Updated environment lockfiles
           committer: "Lockfile bot <noreply@github.com>"
           author: "Lockfile bot <noreply@github.com>"
           delete-branch: true
           branch: auto-update-lockfiles
-          title: "[iris.ci] environment lockfiles auto-update"
+          title: "[CI Bot] environment lockfiles auto-update"
           body: |
             Lockfiles updated to the latest resolvable environment.
             ### If the CI tasks fail, create a new branch based on this PR and add the required fixes to that branch.
